sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:7: error: ';' expected but ',' found.
      swapped1, swapped2 = false;
              ^